syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.dream365.example";

package example;

service TestService {
  rpc getResult (getResultRequest) returns (getResultResponse);
}

message getResultRequest {
  string msg = 1;
}

message getResultResponse {
  string res = 1;
}